--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,14 @@
-CHAT_GPT_EMAIL=
-CHAT_GPT_PASSWORD=
-CHAT_GPT_RETRY_TIMES=
-CHAT_PRIVATE_TRIGGER_KEYWORD=
-OPENAI_PROXY=
-NOPECHA_KEY=
-CAPTCHA_TOKEN=
+# Your API Key for OpenAI
+OPENAI_API_KEY=
+# Provide proxy for OpenAI API. e.g. http://127.0.0.1:7890
+HTTPS_PROXY=
+# Custom base url for OpenAI API. default: https://api.openai.com
+OPENAI_API_BASE_URL=
+# Inject analytics or other scripts before </head> of the page
+HEAD_SCRIPTS=
+# Secret string for the project. Use for generating signatures for API calls
+SECRET_KEY=
+# Set password for site. If not set, site will be public
+SITE_PASSWORD=
+# ID of the model to use. https://platform.openai.com/docs/api-reference/models/list
+OPENAI_API_MODEL=
