--- a/package.json
+++ b/package.json
@@ -1,38 +1,41 @@
 {
-  "name": "wechat-chatgpt",
-  "version": "1.0.0",
-  "description": "",
-  "main": "dist/main.js",
-  "export": "dist/main.js",
+  "name": "chatgpt-api-demo",
+  "type": "module",
+  "version": "0.0.1",
   "scripts": {
-    "dev": "nodemon --exec node --watch config.yaml --loader ts-node/esm src/main.ts",
-    "build": "tsc"
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "build:vercel": "OUTPUT=vercel astro build",
+    "build:netlify": "OUTPUT=netlify astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "async-retry": "^1.3.3",
-    "chatgpt": "^3.5.1",
-    "dotenv": "^16.0.3",
-    "execa": "^6.1.0",
-    "qrcode": "^1.5.1",
-    "uuid": "^9.0.0",
-    "wechaty": "^1.20.2",
-    "wechaty-puppet-wechat": "^1.18.4",
-    "yaml": "^2.1.3"
+    "@astrojs/netlify": "2.0.0",
+    "@astrojs/node": "^5.0.4",
+    "@astrojs/solid-js": "^2.0.2",
+    "@astrojs/vercel": "^3.1.3",
+    "@unocss/reset": "^0.50.1",
+    "astro": "^2.0.15",
+    "eventsource-parser": "^0.1.0",
+    "highlight.js": "^11.7.0",
+    "js-sha256": "^0.9.0",
+    "katex": "^0.6.0",
+    "markdown-it": "^13.0.1",
+    "markdown-it-highlightjs": "^4.0.1",
+    "markdown-it-katex": "^2.0.3",
+    "solid-js": "1.6.12",
+    "solidjs-use": "^1.2.0",
+    "undici": "^5.20.0"
   },
   "devDependencies": {
-    "@types/async-retry": "^1.4.5",
-    "@types/qrcode": "^1.5.0",
-    "@types/uuid": "^9.0.0",
-    "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1"
-  },
-  "nodemonConfig": {
-    "watch": "src",
-    "ext": "ts",
-    "exec": "node --loader ts-node/esm src/main.ts",
-    "delay": 500
-  },
-  "type": "module"
+    "@iconify-json/carbon": "^1.1.16",
+    "@types/markdown-it": "^12.2.3",
+    "@unocss/preset-attributify": "^0.50.1",
+    "@unocss/preset-icons": "^0.50.4",
+    "@unocss/preset-typography": "^0.50.3",
+    "punycode": "^2.3.0",
+    "unocss": "^0.50.1"
+  }
 }
